ajustando as configurações para processar as mensagens de acordo com a versão do rabbitmq

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,35 @@
 server.port=8887
-spring.profiles.active=${SPRING.PROFILES.ACTIVE}
+spring.profiles.active=dev
 
+####### Version Config
+rabbitmq.version.greater.than.or.equal.to.3.10=true
+
+####### Redelivery Config
+rabbitmq.retry.delay-in-ms=20000
+rabbitmq.retry.count= 3
+
+###### Rabbit Config version <= 3.10
+#spring.rabbitmq.host=${SPRING_RABBITMQ_HOST}
+#spring.rabbitmq.virtual-host=${SPRING_RABBITMQ_VIRTUAL_HOST}
+#spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME}
+#spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD}
+#spring.rabbitmq.port=${SPRING_RABBITMQ_PORT}
+#spring.rabbitmq.ssl.enabled=true
+
+###### Rabbit Config version >= 3.10
 spring.rabbitmq.host=${SPRING_RABBITMQ_HOST}
 spring.rabbitmq.virtual-host=${SPRING_RABBITMQ_VIRTUAL_HOST}
 spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME}
 spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD}
-
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT}
 spring.rabbitmq.listener.simple.default-requeue-rejected=false
 
-rabbitmq.retry.delay-in-ms=20000
-rabbitmq.retry.count= 3
+
+
+
+
+
+
+
+
 
